--- a/css/global.css
+++ b/css/global.css
@@ -118,7 +118,7 @@ div.header h1 {
     color: var(--bg-color);
     padding: 0;
     font-size: 1.5rem;
-    color: darkgreen;
+    color: yellow;
     margin: 0;
 }
 
