--- a/css/Contacts.css
+++ b/css/Contacts.css
@@ -1,2 +1,15 @@
-﻿body {
+﻿:root {
+    --font-family: helvetica;
+    --font-size: 16px;
+    --bg-image: url("../assets/img/fundo.jpeg");
+    --max-width: auto;
+    --min-width: auto;
+}
+
+article{
+    background-image: var(--bg-image);
+    background-size: cover;
+    display: flex;
+    width: 100%;
+    height: 100%;
 }
