--- a/css/about.css
+++ b/css/about.css
@@ -1,10 +1,3 @@
-﻿body {
-    background:red;
-}
-
-article h1 {
-    color: green;
-    text-align:center;
-    font-size:48px;
-    text-shadow:2px 2px 20px black;
+body {
+    background:black;
 }
