--- a/css/logincad.css
+++ b/css/logincad.css
@@ -180,6 +180,7 @@ input {
     animation-duration: 0.5s;
     animation-timing-function: ease;
     animation-fill-mode: both;
+    justify-content:center;
 }
 
 #paracadastro:target ~ .content #cadastro,
