--- a/css/about.css
+++ b/css/about.css
@@ -3,17 +3,22 @@ body {
     background: black;
 }
 
- article h1 {
-    -webkit-text-stroke: .4vh black;
+article p{
+    text-align: justify;
+}
+
+article h1 {
+    -webkit-text-stroke: .4vh white;
     font-size: 5vh;
     font-weight: bold;
     text-align: center;
     text-transform: uppercase;
     background-image: url('../assets/img/background_01.jpg');
     background-clip: content-box;
-    -webkit-background-clip:content-box;
+    -webkit-background-clip: content-box;
     color: transparent;
     animation: text 10s ease alternate infinite;
+    border-radius: 15px;
 }
 
 @keyframes text {
