--- a/css/Contacts.css
+++ b/css/Contacts.css
@@ -6,20 +6,26 @@
     --min-width: auto;
 }
 
-{
+.main{
     background-image: var(--bg-image);
     background-size: cover;
     display: flex;
     width: 100%;
     height: 100%;
 }
+
+
 .caixa {
     background: #e0e1dd;
     width: 100%;
-    /*max-width: 500px;*/
-    margin: 0px auto;
     position: relative;
-    border-radius: 2vh;
     display: flex;
 }
 
+#form {
+    width: 100%;
+}
+
+div.caixa{
+    width: 100%;
+}
