--- a/css/logincad.css
+++ b/css/logincad.css
@@ -46,7 +46,7 @@ a {
 
 /* formatando o cabeçalho dos formulários */
 h1 {
-    font-size: 48px;
+    font-size: 25px;
     color: #066a75;
     padding: 10px 0;
     font-family: Arial,sans-serif;
@@ -129,7 +129,7 @@ input {
         }
 
 /*marcando os links para mudar de um formulário para outro */
-.link {
+.link, h5 {
     /*position: absolute;*/
     background: #e1eaeb;
     color: #7f7c7c;
@@ -143,7 +143,7 @@ input {
     display: flex;
 }
 
-    .link a {
+    .link:nth-child(2) {
         font-weight: bold;
         background: #f7f8f1;
         padding: 6px;
@@ -167,7 +167,7 @@ input {
 #login {
     /*position: absolute;*/
     /*top: 0px;*/
-    width: 88%;
+    width: 50%;
     padding: 1rem;
     /*margin: 0 0 35px 0;*/
     margin: auto;
@@ -248,3 +248,29 @@ input {
         transform: translateX(-20px);
     }
 }
+
+@media (max-width: 420px) {
+
+    .link {
+        width: 100%;
+    }
+
+    body {
+        
+    }
+
+}
+
+
+@media (min-width: 791px) {
+
+    .link {
+        width: 50%;
+        float: left;
+        display: inline-block;
+     
+    }
+
+}
+#conta{min-height: 80px;}
+
